--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -43,6 +43,15 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<configuration>
+					<includes>
+						<include>org/openmrs/**</include>
+					</includes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
